# NYC-Data-Pipeline-Creator

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.agents/skills/asset-builder/: SKILL.md
.agents/skills/duckdb-analyst/: SKILL.md
.agents/skills/querystation/: SKILL.md
.agents/skills/querystation/prompts/: 01-311-volume-trends.md  02-311-agency-performance.md  03-311-geographic.md  04-capital-budget.md  05-city-payroll.md  06-checkbook-finance.md  07-restaurant-inspections.md  08-floodnet.md  09-mta-transportation.md  10-cross-dataset.md  11-data-quality.md  12-export.md
.agents/skills/socrata-builder/: SKILL.md
.agents/skills/socrata-builder/references/: pipeline-templates.md
.agents/skills/socrata-builder/scripts/: fetch_catalog.py  fetch_socrata_metadata.py
examples/querystation/: 311_and_flood.md
examples/reports/: dsnytonnage.md
notebooks/: query_local.ipynb  query_remote.ipynb
scripts/: explore_15.py  load_test_remote.py  pull_311_2025.py  query_remote.py
src/opendata_eda/: definitions.py
src/opendata_eda/defs/assets/: nyc_311_sample.py  nyc_dsny_monthly_tonnage.py  nyc_film_permits.py  nyc_motor_vehicle_collisions.py
src/opendata_eda/defs/assets/floodnet/: _shared.py  events_joined.py  flooding_events.py  sensor_metadata.py
src/opendata_eda/defs/assets/sql_assets/: __init__.py  collisions_annual_summary.sql  collisions_borough_monthly.sql  collisions_contributing_factors.sql  dsny_tonnage_annual_summary.sql  dsny_tonnage_borough_monthly.sql  dsny_tonnage_district_rankings.sql  (+6 more)
